--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.14.0",
     "express-session": "~1.14.1",
     "fs-extra": "^7.0.1",
+    "hashids": "^1.2.2",
     "method-override": "~2.3.6",
     "mongoose": "~4.13.1",
     "morgan": "~1.7.0",
