--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "server": "nodemon server.js"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "axios": "^0.18.0",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.15.2",
