--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fs-extra": "^7.0.1",
     "hashids": "^1.2.2",
     "method-override": "~2.3.6",
-    "mongoose": "~4.13.1",
+    "mongoose": "^5.4.4",
     "morgan": "~1.7.0",
     "multer": "^1.4.1",
     "nodemon": "^1.18.9",
