--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "ejs": "~2.5.2",
+    "elasticsearch": "^15.3.1",
     "express": "~4.14.0",
     "express-session": "~1.14.1",
     "fs-extra": "^7.0.1",
