--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "~1.14.1",
     "fs-extra": "^7.0.1",
     "hashids": "^1.2.2",
+    "html2plaintext": "^2.1.2",
     "method-override": "~2.3.6",
     "mongoose": "^5.4.4",
     "morgan": "~1.7.0",
