--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "elasticsearch": "^15.3.1",
     "express": "~4.14.0",
     "express-session": "~1.14.1",
+    "express-winston": "^3.1.0",
     "fs-extra": "^7.0.1",
     "hashids": "^1.2.2",
     "html2plaintext": "^2.1.2",
@@ -28,6 +29,8 @@
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.4"
+    "passport-twitter": "~1.0.4",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.7.0"
   }
 }
