--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.4",
+    "sharp": "^0.21.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.7.0"
   }
