--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "fs-extra": "^7.0.1",
     "hashids": "^1.2.2",
     "html2plaintext": "^2.1.2",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "method-override": "~2.3.6",
     "mongoose": "^5.4.4",
     "morgan": "~1.7.0",
